2023-10-19  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha02: Elk Rut';git push
	git tag -a 5.1.9-alpha02 -m 'all: NCZarr unlim dim; ncremap --mpt_mss';git push --tags

	* Document --mpt_mss

	* Implement --mpt_mss as ncremap switch and pass-through. Solves problem.

	* Implement flg_mpt_mss so MPAS-Seaice data remains, by default, zero in open-ocean regions

	* Verify that ncgen produces, and ncks reads, NCZarr-format in_zarr4. Yay!

	* Restore NC_UNLIMITED dimension to in_zarr4.cdl after PR #2744 added support

2023-10-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.9-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.9-alpha01: Bandelier';git push
	git tag -a 5.1.9-alpha01 -m 'Functionally identical to 5.1.8 (except ncremap)';git push --tags

	* Add ncremap invocations for trbilin, trintbilin

	* Add ncremap synonyms esmfaave, ncoaave, traave, esmfbilin, esmfndtos

2023-09-17  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8 release procedure:
	cd ~/nco;git commit -a -m "Version 5.1.8: Cafe Pasqual\'s";git push
	git tag -a 5.1.8 -m 'all: NC_STRING atts ok, Frontier;ncremap mpas grd rdn, E3SMU 1.9.0;ncks chk_chr, chk_mss, diwg_chk';git push --tags

2023-09-14  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.8-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha05: Foggy Wharf';git push
	git tag -a 5.1.8-alpha05 -m 'ncclimo: disambiguate Frontier/Perlmutter login nodes; ncremap: nrm=N/A; E3SMU 1.9.0 paths';git push --tags

	* Verify nco_bm.pl --regress ncremap works once again with server dust=imua

	* ncremap/ncclimo update NPO paths to be consistent with E3SMU 1.9.0

2023-09-07  Charlie Zender  <zender@uci.edu>

	* Make "N/A" equivalent to "none" when parsing ESMF "normalization" map attributes

2023-09-01  Charlie Zender  <zender@uci.edu>

	* Disambiguate Frontier + Perlmutter nodes named login[0123456789][0123456789]
